--- a/AllFiles/Mod03/DemoFiles/HttpClientApplication/Starter/HttpClientApplication.Client/HttpClientApplication.Client.csproj
+++ b/AllFiles/Mod03/DemoFiles/HttpClientApplication/Starter/HttpClientApplication.Client/HttpClientApplication.Client.csproj
@@ -11,4 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\HttpClientApplication.Host\HttpClientApplication.Host.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.6" />
+  </ItemGroup>
 </Project>
