--- a/AllFiles/Mod03/DemoFiles/AutoRest/Starter/AutoRest.Client/AutoRest.Client.csproj
+++ b/AllFiles/Mod03/DemoFiles/AutoRest/Starter/AutoRest.Client/AutoRest.Client.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AutoRest.Sdk\AutoRest.Sdk.csproj" />
+    <ProjectReference Include="..\autorest.host\AutoRest.Host.csproj" />
   </ItemGroup>
 
 </Project>
