--- a/AllFiles/Mod05/Labfiles/Exercise3/Starter/BlueYonder.Hotels.Service/BlueYonder.Hotels.Service/BlueYonder.Hotels.Service.csproj
+++ b/AllFiles/Mod05/Labfiles/Exercise3/Starter/BlueYonder.Hotels.Service/BlueYonder.Hotels.Service/BlueYonder.Hotels.Service.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
     <UserSecretsId>62dc8251-86bc-455b-992d-6f46f48a190f</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +15,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.1.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.4.10" />
   </ItemGroup>
 
 </Project>
