--- a/AllFiles/Mod07/DemoFiles/Mod7Demo6Redis/BlueYonder.Hotels.Service/appsettings.json
+++ b/AllFiles/Mod07/DemoFiles/Mod7Demo6Redis/BlueYonder.Hotels.Service/appsettings.json
@@ -1,11 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "RedisConnectionString": "mod7demo6redismka.redis.cache.windows.net:6380,password=cGz1K5yOqPyHM05O7x7klUU2lKJ9uOFWDG2DDoAauHs=,ssl=True,abortConnect=False"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "RedisConnectionString": "{Paste Your Connection String}"
-  }
 }
