--- a/AllFiles/Mod07/Labfiles/Lab3/Starter/BlueYonder.Flights/BlueYonder.Flights.Service/appsettings.json
+++ b/AllFiles/Mod07/Labfiles/Lab3/Starter/BlueYonder.Flights/BlueYonder.Flights.Service/appsettings.json
@@ -1,9 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "RedisConnectionString": "[RedisConnectionString]"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "RedisConnectionString": "blueyonder-cachemka.redis.cache.windows.net:6380,password=ZTrOzAgDO1Sx8Plyrzqh7IdK5NuKrRwtkzAXwHMaokc=,ssl=True,abortConnect=False"
 }
