--- a/AllFiles/Mod07/Labfiles/Lab1/Starter/BlueYonder.Flights.Service/BlueYonder.Flights.Service.csproj
+++ b/AllFiles/Mod07/Labfiles/Lab1/Starter/BlueYonder.Flights.Service/BlueYonder.Flights.Service.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.1" />
   </ItemGroup>
 
 </Project>
