--- a/AllFiles/Mod08/Labfiles/Lab2/Starter/appsettings.json
+++ b/AllFiles/Mod08/Labfiles/Lab2/Starter/appsettings.json
@@ -1,9 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ApplicationInsights": {
+        "InstrumentationKey": "a7173058-deba-4206-9195-23964c6c0d5f"
     }
-  },
-  "AllowedHosts": "*"
- 
 }
