--- a/AllFiles/Mod09/DemoFiles/OpenIDConnectAAD/OpenIDConnectAAD/appsettings.json
+++ b/AllFiles/Mod09/DemoFiles/OpenIDConnectAAD/OpenIDConnectAAD/appsettings.json
@@ -1,10 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "oic:ClientID": "[Insert ApplicationId from Azure Portal]",
-  "oic:Authority": "https://login.microsoftonline.com/[Insert TenentId from Azure Portal]"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "oic:ClientID": "f6767bad-87a9-4dfa-9b57-ed75f7215adf",
+    "oic:Authority": "https://login.microsoftonline.com/835624ce-9c49-4eba-b147-d1d2f0d8377e"
 }
